[package]
name = "fire"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "3.2", features = ["cargo", "color", "derive", "suggestions"] }
regex = "1.3"
reqwest = { version = "0.11", features = ["blocking"] }
log = "0.4"
env_logger = "0.9"
termcolor = "1.1"
dotenvy = "0.15"
#serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
url = "2.2"
lazy_static = "1.4"
handlebars = "4.3"
walkdir = "2.3"
git2 = "0.15"

[build-dependencies]
built = { version = "0.5" }

[profile.release]
lto = true
