[package]
name = "fire"
version = "0.1.0"
authors = ["Anton Österberg <anton@42x.io>"]
edition = "2021"
build = "build.rs"

[lib]
name = "http"
path = "src/http/lib.rs"

[[bin]]
name = "fire"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2", features = ["cargo", "color", "derive", "suggestions"] }
ureq = "2.5"
log = "0.4"
env_logger = "0.9"
termcolor = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = { version = "1.0" }
url = "2.3"
handlebars = "4.3"
walkdir = "2.3"
syntect = "5.0"

[build-dependencies]
built = { version = "0.5" }

[profile.release]
lto = true
